@@ -4,6 +4,11 @@ partman-auto (76) UNRELEASED; urgency=low
   * Support preseeding partman-auto/choose_recipe using the name of the
     recipe you want (e.g. "home"), as an alternative to the localised
     description.
+  * Ensure that there is always at least one primary partition after
+    autopartitioning. An existing primary partition on the disk satisfies
+    this, as does a recipe partition explicitly marked $primary{ }; if
+    neither of those exists, then arbitrarily promote the first recipe
+    partition to be a primary partition.
 
   [ Guido Guenther ]
   * Allow multipathed devices as auto_disks
